--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
   font-family: "Arial", sans-serif;
   text-align: center;
 
-  background-image: url("./abc.jpg");
+  background-image: url("https://cdn.wallpapersafari.com/74/49/F7dPYn.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   margin: 0;
